tests/ui/dis/ptr_copy.normal.stderr
error: Cannot memcpy dynamically sized data
    --> $CORE_SRC/intrinsics.rs:2416:9
     |
2416 |         copy(src, dst, count)
     |         ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

